# prediction-market-challenge

./: .gitignore  Cargo.toml  README.md  eval_strategy.py  pyproject.toml
docs/: orderbook_prediction_market_challenge.md
orderbook_pm_challenge/: __init__.py  _strategy_worker.py  backend.py  cli.py  engine.py  process.py  runner.py  sandbox.py  strategy_host.py
src/: lib.rs
tests/: test_orderbook_pm_challenge.py  test_sandbox.py
