[project]
name = "orderbook-pm-challenge"
version = "0.1.0"
description = "FIFO orderbook prediction market trading challenge"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
scientific = [
    "numpy",
    "scipy",
    "pandas",
]

[project.scripts]
orderbook-pm = "orderbook_pm_challenge.cli:main"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "orderbook_pm_challenge._rust_sim"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
